--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum consequatur delectus atque laborum iure! Voluptatum sed tempora</p>
        </div>
        <div class="col-md-5">
-           <img src="images/content1.jpg" alt="" class="content-image img-responsive center-block">
+           <img src="images/content1.jpg" alt="" class="content-image img-responsive center-block float-right" width=400 height=300>
        </div> 
     </div>
     <div class="row content">
         <div class="col-md-5">
-            <img src="images/content2.jpg" alt="" class="content-image img-responsive center-block" width=600 height=300>
+            <img src="images/content2.jpg" alt="" class="content-image img-responsive center-block float-leftt" width=400 height=300>
         </div> 
         <div class="col-md-7 conclass">
             <h2 class="content-heading">Anonymous. <span class="text-muted">1 week ago.</span></h2>
@@ -164,7 +164,7 @@
             <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum consequatur delectus atque laborum iure! Voluptatum sed tempora</p>
         </div>
         <div class="col-md-5">
-            <img src="images/content3.jpg" alt="" class="content-image img-responsive center-block" width=600 height=300>
+            <img src="images/content3.jpg" alt="" class="content-image img-responsive center-block float-right" width=400 height=300>
         </div> 
     </div>
     <!-- container section ends here  -->
