--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     </div>
     <div class="row content">
         <div class="col-md-5">
-            <img src="images/content2.jpg" alt="" class="content-image img-responsive center-block float-leftt" width=400 height=300>
+            <img src="images/content2.jpg" alt="" class="content-image img-responsive center-block float-left" width=400 height=300>
         </div> 
         <div class="col-md-7 conclass">
             <h2 class="content-heading">Anonymous. <span class="text-muted">1 week ago.</span></h2>
